@@ -1,0 +1,1 @@
+<http://example.org/s> <http://example.org/p> "value"^<http://example.org/t> .
